fix container alignment

--- a/iskol-tools-grading/src/shared/styles/content-page.css
+++ b/iskol-tools-grading/src/shared/styles/content-page.css
@@ -1,5 +1,5 @@
 .content-page-container {
   padding: 10px;
   border: thin solid #c8c6c4;
-  height: 93vh;
+  height: 93.2vh;
 }
